...
    "ios.done": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Done"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "完成"
...
    "ios.login.email": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Email"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "邮箱"
...
    "ios.login.password": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Password"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "密码"
...
    "ios.rec.delete": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "删除"
...
    "ios.save": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Save"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "保存"
...
    "ios.settings.logout": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Log out"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "退出登录"
...
            "value": "Library"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "录音库"
          }
        }
      }
    },
    "ios.tab.live": {
      "extractionState": "manual",
...
            "value": "Live"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "实时字幕"
          }
        }
      }
    },
    "ios.tab.settings": {
      "extractionState": "manual",
...
            "value": "Settings"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "设置"
          }
        }
      }
    },
    "ios.text.bold": {
      "extractionState": "manual",
...
